Replace `allowSyntheticDefaultImports` by `esModuleInterop`, which appears to fix jimp-dev/jimp#1191

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
   },
 }
